[package]
name = "dmap"
version = "0.1.0"
authors = ["max <me@mclifford.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4.19"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"